Change address the chromedriver

--- a/TestMaven2/test-output/index.html
+++ b/TestMaven2/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\TraOLong\eclipse-workspace\TestMaven2\testng.xml</span>
+                    <span>C:\Users\TraOLong\git\course-selenium-webdriver-api\TestMaven2\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -137,7 +137,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\TraOLong\eclipse-workspace\TestMaven2\testng.xml</span>
+            <span class="header-content">C:\Users\TraOLong\git\course-selenium-webdriver-api\TestMaven2\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -190,7 +190,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'FirstTest')
 data.setCell(0, 2, 'TestNG.NewTest')
-data.setCell(0, 3, 113474);
+data.setCell(0, 3, 112270);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -228,15 +228,15 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">BeforeTest</span>
-                <span class="method-start">12971 ms</span>
+                <span class="method-start">8188 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">FirstTest</span>
-                <span class="method-start">15225 ms</span>
+                <span class="method-start">10153 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">AfterSuite</span>
-                <span class="method-start">128750 ms</span>
+                <span class="method-start">122477 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
