--- a/TestMaven2/test-output/old/Default suite/methods.html
+++ b/TestMaven2/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d079a3">  <td>21/05/12 16:29:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestHandleWindows.beforeClass()[pri:0, instance:TestNG.TestHandleWindows@77f1baf5]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="d079a3">  <td>21/05/12 20:25:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestHandle_IFrames.beforeClass()[pri:0, instance:TestNG.TestHandle_IFrames@77f1baf5]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1730704097</td>   <td></td> </tr>
-<tr bgcolor="d079a3">  <td>21/05/12 16:29:12</td>   <td>5389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestHandleWindows.f()[pri:0, instance:TestNG.TestHandleWindows@77f1baf5]">f</td> 
+<tr bgcolor="d079a3">  <td>21/05/12 20:25:09</td>   <td>5534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestHandle_IFrames.f1()[pri:1, instance:TestNG.TestHandle_IFrames@77f1baf5]">f1</td> 
   <td>main@1730704097</td>   <td></td> </tr>
-<tr bgcolor="d079a3">  <td>21/05/12 16:29:17</td>   <td>10768</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestHandleWindows.afterClass()[pri:0, instance:TestNG.TestHandleWindows@77f1baf5]">&lt;&lt;afterClass</td> 
+<tr bgcolor="d079a3">  <td>21/05/12 20:25:20</td>   <td>15823</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestHandle_IFrames.afterClass()[pri:0, instance:TestNG.TestHandle_IFrames@77f1baf5]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1730704097</td>   <td></td> </tr>
 </table>
