--- a/SELENIUM_WEBDRIVER_API/test-output/emailable-report.html
+++ b/SELENIUM_WEBDRIVER_API/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">10,415</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">6,030</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.wordpress.TestcasesLoginPage.VerifyWordpressLogin</td><td><a href="#m0">verifyValidLogin</a></td><td rowspan="1">1620967109484</td><td rowspan="1">10397</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.wordpress.TestcasesLoginPage.VerifyWordpressLoginPagenew</td><td><a href="#m0">checkValidUser</a></td><td rowspan="1">1620983252038</td><td rowspan="1">6015</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.wordpress.TestcasesLoginPage.VerifyWordpressLogin#verifyValidLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.wordpress.TestcasesLoginPage.VerifyWordpressLoginPagenew#checkValidUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
