--- a/SELENIUM_WEBDRIVER_API/test-output/index.html
+++ b/SELENIUM_WEBDRIVER_API/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\TraOLong\AppData\Local\Temp\testng-eclipse--1619768985\testng-customsuite.xml</span>
+                    <span>C:\Users\TraOLong\AppData\Local\Temp\testng-eclipse-1806925750\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.wordpress.TestcasesLoginPage.VerifyWordpressLogin" class="method navigator-link" hash-for-method="verifyValidLogin">verifyValidLogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.wordpress.TestcasesLoginPage.VerifyWordpressLoginPagenew" class="method navigator-link" hash-for-method="checkValidUser">checkValidUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.wordpress.TestcasesLoginPage.VerifyWordpressLogin</span>
+              <span class="class-name">com.wordpress.TestcasesLoginPage.VerifyWordpressLoginPagenew</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyValidLogin">
-                  </a> <!-- verifyValidLogin -->
-                  <span class="method-name">verifyValidLogin</span>
+                  <a name="checkValidUser">
+                  </a> <!-- checkValidUser -->
+                  <span class="method-name">checkValidUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\TraOLong\AppData\Local\Temp\testng-eclipse--1619768985\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\TraOLong\AppData\Local\Temp\testng-eclipse-1806925750\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.wordpress.TestcasesLoginPage.VerifyWordpressLogin&quot;/&gt;
+      &lt;class name=&quot;com.wordpress.TestcasesLoginPage.VerifyWordpressLoginPagenew&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyValidLogin')
-data.setCell(0, 2, 'com.wordpress.TestcasesLoginPage.VerifyWordpressLogin')
-data.setCell(0, 3, 10397);
+data.setCell(0, 1, 'checkValidUser')
+data.setCell(0, 2, 'com.wordpress.TestcasesLoginPage.VerifyWordpressLoginPagenew')
+data.setCell(0, 3, 6015);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,9 +219,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.wordpress.TestcasesLoginPage.VerifyWordpressLogin</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.wordpress.TestcasesLoginPage.VerifyWordpressLoginPagenew</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">verifyValidLogin</span>
+                <span class="method-name">checkValidUser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
