--- a/SELENIUM_WEBDRIVER_API/test-output/old/Default suite/classes.html
+++ b/SELENIUM_WEBDRIVER_API/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.wordpress.TestcasesLoginPage.VerifyWordpressLogin</td>
+<td>com.wordpress.TestcasesLoginPage.VerifyWordpressLoginPagenew</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyValidLogin</td>
+<td>checkValidUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
