--- a/TestMaven2/test-output/old/Default suite/methods-alphabetical.html
+++ b/TestMaven2/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d079a3">  <td>21/05/14 08:33:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestUploadFile.afterClass()[pri:0, instance:TestNG.TestUploadFile@77f1baf5]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1730704097</td>   <td></td> </tr>
-<tr bgcolor="d079a3">  <td>21/05/14 08:33:04</td>   <td>-12384</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestUploadFile.beforeClass()[pri:0, instance:TestNG.TestUploadFile@77f1baf5]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1730704097</td>   <td></td> </tr>
-<tr bgcolor="d079a3">  <td>21/05/14 08:33:09</td>   <td>-7681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestUploadFile.f()[pri:0, instance:TestNG.TestUploadFile@77f1baf5]">f</td> 
-  <td>main@1730704097</td>   <td></td> </tr>
+<tr bgcolor="d079a3">  <td>21/05/15 10:05:06</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPagewithPageFactory.afterTest()[pri:0, instance:TestPage.LoginPagewithPageFactory@77f1baf5]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@282496973</td>   <td></td> </tr>
+<tr bgcolor="d079a3">  <td>21/05/15 10:04:51</td>   <td>-14714</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPagewithPageFactory.beforeTest()[pri:0, instance:TestPage.LoginPagewithPageFactory@77f1baf5]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@282496973</td>   <td></td> </tr>
+<tr bgcolor="d079a3">  <td>21/05/15 10:04:59</td>   <td>-7328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPagewithPageFactory.testCreateAccount()[pri:0, instance:TestPage.LoginPagewithPageFactory@77f1baf5]">testCreateAccount</td> 
+  <td>main@282496973</td>   <td></td> </tr>
 </table>
